<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyNotifier</string>
    <string name="bottomNavigationMenu_today">today</string>
    <string name="bottomNavigationMenu_all">all</string>
    <string name="bottomNavigationMenu_settings">settings</string>
    <string name="inDevelopment">In the development</string>

    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="short_monday">MON</string>
    <string name="short_tuesday">TUE</string>
    <string name="short_wednesday">WED</string>
    <string name="short_thursday">THU</string>
    <string name="short_friday">FRI</string>
    <string name="short_saturday">SAT</string>
    <string name="short_sunday">SUN</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="afterInterval">In</string>
    <string name="interval">Interval</string>
    <string name="text">Text</string>
    <string name="title">Title</string>
    <string name="oneTimeNotification">Onetime notification</string>
    <string name="periodicNotification">Periodic notification</string>
    <string name="rules">Rules</string>
    <string name="settings">Settings</string>
    <string name="appTheme">App theme</string>
    <string name="appLanguage">App language</string>
    <string name="downloadConfig">Download config</string>
    <string name="uploadConfig">Upload config</string>
    <string name="timeNotChosen">Time is not chosen</string>
    <string name="chooseInterval">Choose an interval</string>
    <string name="exactTime">Exact time</string>

    <string name="cannotOpenNotificationSettings">Cannot open notification settings</string>
    <string name="needToOpenNotificationSettings">You have denied permission forever.
        You can change your decision in the app settings. Would you like to open app settings?</string>
    <string name="attention">Attention</string>
    <string name="needToGrandPostNotificationsPermission">You must grant permission to send notifications.
        Notifications are a key part of the functionality of the application</string>
    <string name="open">Open</string>

    <string name="createNotification_title">Create a notification</string>
    <string name="createNotification_subtitle">Select the notification type</string>
    <string name="createNotification_oneTime">One time</string>
    <string name="createNotification_periodic">Periodic</string>

    <string name="notificationTimeNotSpecified">Notification time is not specified</string>
    <string name="noPeriodicNoificationRules">You must specify at least one notification time rule</string>
</resources>