<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="32sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:stretchColumns="*"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow>

            <ldev.myNotifier.presentation.fragments.settings.SettingsWidget
                android:id="@+id/theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                app:settingsWidget_icon="@drawable/palette"
                app:settingsWidget_title="@string/appTheme"
                app:settingsWidget_bgColor="@color/limeGreen" />

            <ldev.myNotifier.presentation.fragments.settings.SettingsWidget
                android:id="@+id/language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                app:settingsWidget_icon="@drawable/language"
                app:settingsWidget_title="@string/appLanguage"
                app:settingsWidget_bgColor="@color/bisque" />

        </TableRow>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <TableRow>

            <ldev.myNotifier.presentation.fragments.settings.SettingsWidget
                android:id="@+id/downloadConfig"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                app:settingsWidget_icon="@drawable/download"
                app:settingsWidget_title="@string/downloadConfig"
                app:settingsWidget_bgColor="@color/limeGreen" />

            <ldev.myNotifier.presentation.fragments.settings.SettingsWidget
                android:id="@+id/uploadConfig"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                app:settingsWidget_icon="@drawable/upload"
                app:settingsWidget_title="@string/uploadConfig"
                app:settingsWidget_bgColor="@color/bisque" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>